# Software-Supply-Chain-hap83334-HW-3

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  part3-writeup.txt  pyproject.toml
.github/workflows/: cd.yml  ci.yml  scorecard.yml
My Rekor/: LICENSE  pyproject.toml
My_rekor/: README.md  cyclonedx-sbom.json  pyproject.toml
My_rekor/src/my_rekor/: main.py
docs/: USAGE.md
src/my_rekor/: main.py
